k8s/trash/nginx-pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.31
      ports:
        - containerPort: 80
      resources:
        requests:
        # cores or millicores(m)
        # 1 core = 1,000m (millicores)
          cpu: "100m"
        # The "Mi" Meaning: It represents Mebibytes 
        #  128Mi is roughly equal to 134.2 Megabytes (MB).
          memory: "128Mi"
        
        limits:
          cpu: "500m"
          memory: "256Mi"
